[package]
name = "playage"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
aoc-spectate = { path = "crates/aoc-spectate" }
aoc-userpatch = { path = "crates/aoc-userpatch" }
async-std = { version = "1.6", features = ["attributes", "unstable"] }
dprun2 = { path = "crates/dprun2" }
# dpsp-libp2p = { path = "crates/dpsp-libp2p" }
# dpsp-local-only = { path = "crates/dpsp-local-only" }
uuid = { version = "0.8", features = ["v4"] }
wololokingdoms = { path = "crates/wololokingdoms" }
byteorder = "1.3.4"

[dev-dependencies]
progress = "0.2"
structopt = "0.3"
futures = "0.3"
winepath = "0.1"

[workspace]
members = [
  "crates/aoc-userpatch",
  "crates/aoc-spectate",
  "crates/dprun",
  "crates/dprun2",
  "crates/dpsp-libp2p",
  "crates/dpsp-local-only",
  "crates/wololokingdoms"
]
