[package]
name = "playage"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
aoc-spectate = { path = "crates/aoc-spectate" }
aoc-userpatch = { path = "crates/aoc-userpatch" }
async-std = { version = "1.9", features = ["attributes", "unstable"] }
byteorder = "1.4.2"
dprun = { path = "crates/dprun" }
dpsp-libp2p = { path = "crates/dpsp-libp2p" }
dpsp-local-only = { path = "crates/dpsp-local-only" }
femme = "2.1.1"
futures = "0.3.12"
log = "0.4.13"
structopt = "0.3.21"
uuid = { version = "0.8", features = ["v4"] }
wololokingdoms = { path = "crates/wololokingdoms" }

[dev-dependencies]
progress = "0.2"
structopt = "0.3"
futures = "0.3"
winepath = "0.1"

[workspace]
members = [
  "crates/aoc-userpatch",
  "crates/aoc-spectate",
  "crates/dprun",
  "crates/dpsp-libp2p",
  "crates/dpsp-local-only",
  "crates/wololokingdoms"
]
