[package]
name = "dprun"
version = "0.0.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"

[dependencies]
async-process = "1.0.0"
async-std = { version = "1.6.3", default-features = false, features = ["unstable"] }
async-trait = "0.1.40"
byteorder = "1.3.4"
futures = "0.3.5"
futures_codec = "0.4.1"
lazy_static = "1.4"
log = "0.4.11"
uuid = { version = "0.8", default-features = false }
