[package]
name = "dprun"
version = "0.0.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"

[dependencies]
async-process = "1.0.1"
async-std = { version = "1.9.0", default-features = false, features = ["unstable"] }
async-trait = "0.1.42"
byteorder = "1.4.2"
futures = "0.3.12"
futures_codec = "0.4.1"
lazy_static = "1.4"
log = "0.4.13"
uuid = { version = "0.8", default-features = false }
